fix - hide scrollbars on collections gallery thumbnails

--- a/css/shanti-main.css
+++ b/css/shanti-main.css
@@ -506,6 +506,9 @@ ul.menu-main>li>a:first-child { font-family:'droidserif',palatino,'Palatino Lino
 .shanti-thumbnail .footer-wrap a:active{text-decoration:underline;}
 .shanti-thumbnail .footer-wrap .icon{font-size:1.32em;position:relative;top:2px;}
 .shanti-gallery .ajax-progress{ display:none; position:absolute; top:5rem; left:50%;}
+
+.shanti-thumbnail.collection .body-wrap{overflow:hidden;height:14.25rem;}
+
 /*-------------------------*/
 /*--- END video gallery ---*/
 /*-------------------------*/
@@ -1057,8 +1060,8 @@ input.pagerer-page{ border-radius:2px; border:none;	font-size:0.88em; padding-to
 .pager-next{ margin-left:.5rem;}
 .pager-previous{ margin-right:.5rem;}
 
-.pager li.pager-first >.icon{ position:relative; top:-0.2rem;}
-.pager li.pager-previous >.icon{ position:relative; top:-0.35rem;}
+.pager li.pager-first >.icon{ position:relative; top:0.1rem;}
+.pager li.pager-previous >.icon{ position:relative; top:-0.05rem;}
 /*--- END paging --*/
 
 
